--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo-text">Anarchia Market</div>
+            <div class="logo-text">End Shop </div>
             <ul class="menu">
                 <li><a href="#home">Start</a></li>
                 <li><a href="#about">O nas</a></li>
@@ -33,13 +33,14 @@
 
     <section id="contact" class="section">
         <h2>Kontakt</h2>
-        <p>Napisz do nas: <a href="mailto:kontakt@example.com">kontakt@example.com</a></p>
+        <p>Napisz do nas: <a href="mailto:kontakt@example.com">discord.gg/anarchia-market ticket </a></p>
     </section>
 
     <footer>
-        <p>© 2025 Anarchia Market</p>
+        <p>© 2025 End Shop </p>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
