--- a/index.html
+++ b/index.html
@@ -3,44 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anarchia Market</title>
-    <link rel="stylesheet" href="style.css">
+    <title> end shop </title>
+    <style>
+        /* Cała strona wypełniona tłem */
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            background-image: url('logo.png'); /* <- tutaj jest Twoje logo */
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain; /* dopasowanie, ale bez przycinania */
+            background-color: black; /* kolor tła */
+            font-family: Arial, sans-serif;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        /* Półprzezroczysty prostokąt na tekst */
+        h1 {
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px 40px;
+            border-radius: 10px;
+            font-size: 2em;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo-text">End Shop </div>
-            <ul class="menu">
-                <li><a href="#home">Start</a></li>
-                <li><a href="#about">O nas</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-            </ul>
-            <button id="menu-toggle">☰</button>
-        </nav>
-    </header>
-
-    <section id="home" class="hero">
-        <img src="tlo.png" alt="Logo" class="hero-logo">
-        <h1>Witaj w Anarchia Market</h1>
-        <p>Twój sklep w stylu pixel-art</p>
-        <a href="#about" class="btn">Dowiedz się więcej</a>
-    </section>
-
-    <section id="about" class="section">
-        <h2>O nas</h2>
-        <p>Jesteśmy społecznością graczy i twórców, którzy uwielbiają klimat wolności i kreatywności.</p>
-    </section>
-
-    <section id="contact" class="section">
-        <h2>Kontakt</h2>
-        <p>Napisz do nas: <a href="mailto:kontakt@example.com">discord.gg/anarchia-market ticket </a></p>
-    </section>
-
-    <footer>
-        <p>© 2025 End Shop </p>
-    </footer>
-
-    <script src="script.js"></script>
+    <h1>Witaj na stronie end shop!</h1>
 </body>
 </html>
-
