--- a/index.html
+++ b/index.html
@@ -3,36 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> end shop </title>
+    <title>Moja Strona</title>
     <style>
-        /* Cała strona wypełniona tłem */
         body {
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('logo.png'); /* <- tutaj jest Twoje logo */
+            background-image: url('logo.png'); /* plik logo.png musi być obok index.html */
             background-repeat: no-repeat;
             background-position: center;
-            background-size: contain; /* dopasowanie, ale bez przycinania */
-            background-color: black; /* kolor tła */
-            font-family: Arial, sans-serif;
-            color: white;
+            background-size: contain; /* dopasowuje obraz do okna */
+            background-color: black; /* wypełnia tło wokół logo */
             display: flex;
             justify-content: center;
             align-items: center;
+            font-family: Arial, sans-serif;
+            color: white;
             text-align: center;
         }
 
-        /* Półprzezroczysty prostokąt na tekst */
         h1 {
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.6);
             padding: 20px 40px;
             border-radius: 10px;
-            font-size: 2em;
         }
     </style>
 </head>
 <body>
-    <h1>Witaj na stronie end shop!</h1>
+    <h1>Witaj na mojej stronie!</h1>
 </body>
 </html>
