--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('logo.png'); /* plik logo.png musi być obok index.html */
+            background-image: url('https://i.imgur.com/rtW1qHf.png');
             background-repeat: no-repeat;
             background-position: center;
-            background-size: contain; /* dopasowuje obraz do okna */
-            background-color: black; /* wypełnia tło wokół logo */
+            background-size: contain; /* Dopasowanie do okna */
+            background-color: black;  /* Kolor wokół logo */
             display: flex;
             justify-content: center;
             align-items: center;
