--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
             background-image: url('https://i.imgur.com/rtW1qHf.png');
             background-repeat: no-repeat;
             background-position: center;
-            background-size: contain; /* Dopasowanie do okna */
-            background-color: black;  /* Kolor wokół logo */
+            background-size: cover; /* Rozciąga na cały ekran */
+            background-color: black;
+            font-family: Arial, sans-serif;
+            color: white;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: Arial, sans-serif;
-            color: white;
             text-align: center;
         }
-
         h1 {
             background: rgba(0, 0, 0, 0.6);
             padding: 20px 40px;
