--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             background-image: url('https://i.imgur.com/rtW1qHf.png');
             background-repeat: no-repeat;
             background-position: center;
-            background-size: cover; /* Rozciąga na cały ekran */
-            background-color: black;
+            background-size: contain; /* Całe logo widoczne */
+            background-color: black;  /* Kolor w pustych miejscach */
             font-family: Arial, sans-serif;
             color: white;
             display: flex;
