--- a/index.html
+++ b/index.html
@@ -9,26 +9,31 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('https://i.imgur.com/rtW1qHf.png');
+            background-image: url('https://i.imgur.com/rtW1qHf.png'); /* Twoje logo w tle */
             background-repeat: no-repeat;
             background-position: center;
-            background-size: contain; /* Całe logo widoczne */
-            background-color: black;  /* Kolor w pustych miejscach */
-            font-family: Arial, sans-serif;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
+            background-size: contain;
+            background-color: black;
         }
-        h1 {
-            background: rgba(0, 0, 0, 0.6);
-            padding: 20px 40px;
-            border-radius: 10px;
+
+        .discord-logo {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+        }
+
+        .discord-logo img {
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
-    <h1>Witaj na mojej stronie!</h1>
+    <a href="https://discord.gg/bkXKaAZwAf" target="_blank" class="discord-logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg" alt="Discord">
+    </a>
 </body>
 </html>
