--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('https://i.imgur.com/rtW1qHf.png'); /* Twoje logo w tle */
+            background-image: url('https://i.imgur.com/rtW1qHf.png'); /* Logo w tle */
             background-repeat: no-repeat;
             background-position: center;
-            background-size: contain;
+            background-size: contain; /* Całe logo widoczne */
             background-color: black;
+            font-family: Arial, sans-serif;
+            color: white;
         }
 
+        /* Ikona Discorda */
         .discord-logo {
             position: absolute;
             top: 20px;
@@ -23,6 +26,13 @@
             width: 50px;
             height: 50px;
             cursor: pointer;
+            opacity: 0.8;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+
+        .discord-logo:hover {
+            opacity: 1;
+            transform: scale(1.1);
         }
 
         .discord-logo img {
@@ -32,8 +42,9 @@
     </style>
 </head>
 <body>
+    <!-- Link do Discorda -->
     <a href="https://discord.gg/bkXKaAZwAf" target="_blank" class="discord-logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg" alt="Discord">
+        <img src="https://i.imgur.com/4AiXzf8.png" alt="Discord">
     </a>
 </body>
 </html>
