--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 <body>
     <!-- Link do Discorda -->
     <a href="https://discord.gg/bkXKaAZwAf" target="_blank" class="discord-logo">
-        <img src="https://i.imgur.com/4AiXzf8.png" alt="Discord">
+        <img src="https://imgur.com/a/OKpWxGX" alt="Discord">
     </a>
 </body>
 </html>
+
