--- a/index.html
+++ b/index.html
@@ -1,51 +1,44 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moja Strona</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background-image: url('https://i.imgur.com/rtW1qHf.png'); /* Logo w tle */
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain; /* Całe logo widoczne */
-            background-color: black;
-            font-family: Arial, sans-serif;
-            color: white;
-        }
-
-        /* Ikona Discorda */
-        .discord-logo {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 50px;
-            height: 50px;
-            cursor: pointer;
-            opacity: 0.8;
-            transition: opacity 0.3s ease, transform 0.3s ease;
-        }
-
-        .discord-logo:hover {
-            opacity: 1;
-            transform: scale(1.1);
-        }
-
-        .discord-logo img {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Moja Strona</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+    body {
+      background-image: url('https://i.imgur.com/rtW1qHf.png'); /* Twoje logo w tle */
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: contain;
+      background-color: black;
+    }
+    .discord-logo {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+      opacity: 0.8;
+      transition: opacity 0.3s, transform 0.3s;
+    }
+    .discord-logo:hover {
+      opacity: 1;
+      transform: scale(1.1);
+    }
+    .discord-logo img {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
-    <!-- Link do Discorda -->
-    <a href="https://discord.gg/bkXKaAZwAf" target="_blank" class="discord-logo">
-        <img src="https://imgur.com/a/OKpWxGX" alt="Discord">
-    </a>
+  <a href="https://discord.gg/bkXKaAZwAf" target="_blank" class="discord-logo">
+    <img src="LOGO_DIRECT_LINK" alt="Discord">
+  </a>
 </body>
 </html>
-
