--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Moja Strona</title>
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-    }
-    body {
-      background-image: url('https://i.imgur.com/rtW1qHf.png'); /* Twoje logo w tle */
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: contain;
-      background-color: black;
-    }
-    .discord-logo {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      width: 50px;
-      height: 50px;
-      cursor: pointer;
-      opacity: 0.8;
-      transition: opacity 0.3s, transform 0.3s;
-    }
-    .discord-logo:hover {
-      opacity: 1;
-      transform: scale(1.1);
-    }
-    .discord-logo img {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Moja Strona</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        body {
+            background-image: url('https://i.imgur.com/rtW1qHf.png'); /* Twoje tło */
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: contain;
+            background-color: black;
+            position: relative;
+        }
+        .discord-logo {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 50px;
+            height: 50px;
+            opacity: 0.8;
+            transition: opacity 0.3s, transform 0.3s;
+        }
+        .discord-logo:hover {
+            opacity: 1;
+            transform: scale(1.1);
+        }
+        .discord-logo img {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-  <a href="https://discord.gg/bkXKaAZwAf" target="_blank" class="discord-logo">
-    <img src="LOGO_DIRECT_LINK" alt="Discord">
-  </a>
+    <a href="https://discord.gg/bkXKaAZwAf" target="_blank" class="discord-logo">
+        <img src="https://i.imgur.com/48Nthbx.png" alt="Discord">
+    </a>
 </body>
 </html>
